# almacen_de_objetos_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/Modelo/: Cliente.h  Factura.h  Product.h
headers/Services/: ClienteService.h  FacturaService.h  InicioService.h  ProductService.h
headers/Vista/: MenuCliente.h  MenuFactura.h  MenuInicio.h  MenuProduct.h
src/Modelo/: Cliente.cpp  Factura.cpp  Product.cpp
src/Services/: ClienteService.cpp  FacturaService.cpp  InicioService.cpp  ProductService.cpp
src/Vista/: MenuCliente.cpp  MenuFactura.cpp  MenuInicio.cpp  MenuProduct.cpp
utils/headers/: PrintUtils.h
utils/sources/: PrintUtils.cpp
